<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bak_gray"
    android:orientation="vertical">


    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90px">

        <include layout="@layout/layout_top_bar" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:gravity="center"
            android:paddingLeft="20px"
            android:paddingRight="30px"
            android:text="编辑"
            android:textColor="@android:color/white"
            android:visibility="gone" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/bak_gray"
        android:fillViewport="true"
        android:scrollbars="none">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="450px"
                app:default_image="@mipmap/loading2"
                app:indicator_drawable_selected="@drawable/selected_radius"
                app:indicator_drawable_unselected="@drawable/unselected_radius"
                app:indicator_height="@dimen/size_20px"
                app:indicator_margin="@dimen/size_5px"
                app:indicator_width="@dimen/size_20px" />

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="120px"
                android:background="@android:color/white"
                android:gravity="center_vertical">

                <com.zhy.autolayout.AutoLinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/size_20px"
                    android:paddingLeft="@dimen/size_50px"
                    android:paddingTop="@dimen/size_20px">

                    <TextView
                        android:id="@+id/name_and_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="JACK,22"
                        android:textColor="#333"
                        android:textSize="30px" />

                    <ImageView
                        android:id="@+id/image_sex"
                        android:layout_width="40px"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_10px"
                        android:src="@mipmap/ic_boy" />
                </com.zhy.autolayout.AutoLinearLayout>

                <com.zhy.autolayout.AutoLinearLayout
                    android:id="@+id/lint_exp"
                    android:layout_width="wrap_content"
                    android:layout_height="120px"
                    android:layout_marginRight="100px"
                    android:layout_marginTop="-30px"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/current_exp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@color/top_bar_bak"
                        android:textSize="20px" />

                    <com.otw.asd.jjd.widget.ExpView
                        android:id="@+id/expView"
                        android:layout_width="120px"
                        android:layout_height="120px"
                        android:layout_marginLeft="5px"
                        android:layout_marginRight="5px"
                        android:layout_marginTop="50px" />

                    <TextView
                        android:id="@+id/need_exp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@color/top_bar_bak"
                        android:textSize="20px" />
                </com.zhy.autolayout.AutoLinearLayout>

            </com.zhy.autolayout.AutoLinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_15px"
                android:layout_marginLeft="@dimen/size_50px"
                android:layout_marginTop="@dimen/size_20px"
                android:text="@string/user_info_mes_hint"
                android:textColor="#999"
                android:textSize="25px" />

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:orientation="vertical">

                <com.zhy.autolayout.AutoRelativeLayout
                    style="@style/UpdateUserInfoItemRel"
                    android:layout_marginTop="@dimen/size_10px">

                    <TextView
                        style="@style/UpdateUserInfoItemHint"
                        android:text="@string/user_info_declaration_hint" />

                    <TextView
                        android:id="@+id/declaration"
                        style="@style/UpdateUserInfoItem"
                        android:hint="暂无交友宣言" />

                    <TextView style="@style/UpdateUserInfoItemLine" />

                </com.zhy.autolayout.AutoRelativeLayout>


                <com.zhy.autolayout.AutoRelativeLayout style="@style/UpdateUserInfoItemRel">

                    <TextView
                        style="@style/UpdateUserInfoItemHint"
                        android:text="@string/user_info_birthday_hint" />

                    <TextView
                        android:id="@+id/birthday"
                        style="@style/UpdateUserInfoItem"
                        android:hint="未添加" />

                    <TextView style="@style/UpdateUserInfoItemLine" />


                </com.zhy.autolayout.AutoRelativeLayout>

                <com.zhy.autolayout.AutoRelativeLayout style="@style/UpdateUserInfoItemRel">

                    <TextView
                        style="@style/UpdateUserInfoItemHint"
                        android:text="@string/user_info_address_hint" />

                    <TextView
                        android:id="@+id/address"
                        style="@style/UpdateUserInfoItem"
                        android:hint="未添加" />

                    <TextView style="@style/UpdateUserInfoItemLine" />

                </com.zhy.autolayout.AutoRelativeLayout>

                <com.zhy.autolayout.AutoRelativeLayout style="@style/UpdateUserInfoItemRel">

                    <TextView
                        style="@style/UpdateUserInfoItemHint"
                        android:text="@string/user_info_status_hint" />

                    <TextView
                        android:id="@+id/status"
                        style="@style/UpdateUserInfoItem"
                        android:hint="未添加" />

                    <TextView style="@style/UpdateUserInfoItemLine" />

                </com.zhy.autolayout.AutoRelativeLayout>

                <com.zhy.autolayout.AutoRelativeLayout style="@style/UpdateUserInfoItemRel">

                    <TextView
                        style="@style/UpdateUserInfoItemHint"
                        android:text="@string/user_info_constellation_hint" />

                    <TextView
                        android:id="@+id/constellation"
                        style="@style/UpdateUserInfoItem"
                        android:hint="未添加" />

                    <TextView style="@style/UpdateUserInfoItemLine" />

                </com.zhy.autolayout.AutoRelativeLayout>

                <com.zhy.autolayout.AutoRelativeLayout
                    style="@style/UpdateUserInfoItemRel"
                    android:layout_marginBottom="@dimen/size_10px">

                    <TextView
                        style="@style/UpdateUserInfoItemHint"
                        android:text="@string/user_info_byuser_hint" />

                    <TextView
                        android:id="@+id/byUser"
                        style="@style/UpdateUserInfoItem"
                        android:hint="未添加" />

                    <TextView style="@style/UpdateUserInfoItemLine" />

                </com.zhy.autolayout.AutoRelativeLayout>

            </com.zhy.autolayout.AutoLinearLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </ScrollView>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/line_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bak_gray"
        android:paddingBottom="@dimen/size_20px"
        android:paddingLeft="@dimen/size_50px"
        android:paddingRight="@dimen/size_50px"
        android:paddingTop="@dimen/size_20px"
        android:visibility="gone">

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_marginRight="@dimen/size_50px"
            android:layout_weight="1"
            android:background="@drawable/button_user_info_add"
            android:text="加好友"
            android:textColor="#333"
            android:textSize="35px"
            android:visibility="gone" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="80px"
            android:layout_weight="1"
            android:background="@drawable/button_bak"
            android:text="发消息"
            android:textColor="@android:color/white"
            android:textSize="35px" />
    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
